Fixes overlapping projects and technologies sections on zoom

--- a/src/components/Sections/About/About.scss
+++ b/src/components/Sections/About/About.scss
@@ -10,7 +10,7 @@
 
   padding: 4rem 0;
 
-  height: 100vh;
+  height: 100%;
   color: $secondary-color;
 
   gap: 2rem;
@@ -32,7 +32,7 @@
   .about {
     padding: 6rem 0;
 
-    height: 150vh;
+    height: 100%;
 
     &__list {
       font-size: 2rem;
